--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url("white.jpg");
+    background-image: url("white2.jpg");
     background-attachment: fixed;
     background-size:     cover;                     
     background-repeat:   no-repeat;
@@ -10,7 +10,7 @@ body{
 }
 
 h1 {
-    height: 30px;
+    height: 60px;
     text-shadow: 2px 2px 5px black;
     opacity: .9;
   }
